--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -28,6 +28,7 @@
             <div class="header-right">
                 <a href="/dashboard" class="nav-link">Dashboard</a>
                 <a href="/orders" class="nav-link active">Orders</a>
+                <a href="/analytics" class="nav-link">Analytics</a>
                 <a href="/groups" class="nav-link">Groups</a>
                 <a href="/inventory" class="nav-link">Inventory</a>
 
@@ -70,6 +71,10 @@
                 <a href="/orders" class="mobile-nav-link active">
                     <i class="fas fa-box"></i>
                     <span>Orders</span>
+                </a>
+                <a href="/analytics" class="mobile-nav-link">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Analytics</span>
                 </a>
                 <a href="/groups" class="mobile-nav-link">
                     <i class="fas fa-users"></i>
