--- a/src/views/add-business.ejs
+++ b/src/views/add-business.ejs
@@ -20,6 +20,7 @@
             <div class="header-right">
                 <a href="/dashboard" class="nav-link">Dashboard</a>
                 <a href="/orders" class="nav-link">Orders</a>
+                <a href="/analytics" class="nav-link">Analytics</a>
                 <a href="/groups" class="nav-link">Groups</a>
                 <button class="btn btn-icon" id="theme-toggle" aria-label="Toggle Theme">
                     <i class="fas fa-sun"></i>
