--- a/src/views/collection-management.ejs
+++ b/src/views/collection-management.ejs
@@ -25,6 +25,7 @@
             <div class="header-right">
                 <a href="/dashboard" class="nav-link">Dashboard</a>
                 <a href="/orders" class="nav-link">Orders</a>
+                <a href="/analytics" class="nav-link">Analytics</a>
                 <a href="/groups" class="nav-link">Groups</a>
                 <a href="/inventory" class="nav-link">Inventory</a>
                 <button class="btn btn-icon" id="theme-toggle" aria-label="Toggle Theme">
@@ -64,6 +65,10 @@
                 <a href="/orders" class="mobile-nav-link">
                     <i class="fas fa-box"></i>
                     <span>Orders</span>
+                </a>
+                <a href="/analytics" class="mobile-nav-link">
+                    <i class="fas fa-chart-line"></i>
+                    <span>Analytics</span>
                 </a>
                 <a href="/groups" class="mobile-nav-link">
                     <i class="fas fa-users"></i>
