--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,7 +7,7 @@
     
     <!-- Primary Meta Tags -->
     <title>User Login - Novi</title>
-    <meta name="description" content="Login to your Novi account to manage your business operations and WhatsApp commerce operations.">
+    <meta name="description" content="Login to your Novi account to manage your business operations.">
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://novi.com.ng/login">
     
